# unicorn

./: .gitignore  CMakeLists.txt  uc.c
qemu/include/qemu/: compiler.h
qemu/target-arm/: cpu.c
